fixed scrollbar and modulated some code

--- a/indexStyles.css
+++ b/indexStyles.css
@@ -1,3 +1,7 @@
+:root {
+    --translateX: 0%;
+}
+
 body {
     height: 100vh;
     width: 100vw;
@@ -13,7 +17,7 @@ body {
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(0%, -50%);
+    transform: translate(var(--translateX), -50%);
     user-select: none;
     overflow: hidden;
 }
@@ -37,7 +41,7 @@ body {
     height: 56vmin;
     object-fit: cover;
     object-position: 100% center;
-    transition: 0.6s ease, transform 1s ease;
+    transition: 0.6s ease, transform 0.4s ease;
     /* backface-visibility: hidden; */
 }
 
@@ -112,22 +116,22 @@ h1 {
     transition: 0.7s ease, transform 1s ease;
 }
 
-#scrollbar-body {
+#scrollbar-track {
     display: block;
-    width: 650px;
     height: 10px;
     border-radius: 20px;
     background-color: #414141;
     margin: auto;
-    width: 50%;
+    width: 55%;
     margin-top: 87vh;
 }
 
-#scrollbar-circle {
-    width: 20px;
+#scrollbar-thumb {
+    width: 25%;
     height: 10px;
     border-radius: 20px;
     background-color: #ffffff;
+    opacity: 50%;
     position: relative;
     left: 0%;
 }
